Fix layout of buttons and status labels in action cells for "add to my list" • settings a `td` to be `display:flex` makes the cell misalign on firefox • status "added to someone else' list" label to match "added to my list" • prevent review button from taking up too much space on smaller screens

--- a/mtp_noms_ops/assets-src/stylesheets/views/_checks.scss
+++ b/mtp_noms_ops/assets-src/stylesheets/views/_checks.scss
@@ -1,11 +1,3 @@
-.mtp-check-list .button, .mtp-check-list .button-secondary {
-  margin-bottom: 1em;
-
-  @include media(mobile) {
-    margin-left: 0;
-  }
-}
-
 table.mtp-table {
   .mtp-check-date {
     white-space: nowrap;
@@ -156,6 +148,7 @@ table.mtp-table--review {
   justify-content: space-between;
   align-items: center;
 }
+
 .mtp-check-header + .heading-medium {
   margin-top: 0;
 }
@@ -171,14 +164,23 @@ table.mtp-table--review {
 .mtp-check-cell__actions {
   display: flex;
   align-items: center;
+
+  .button, .button-secondary {
+    margin-bottom: 1rem;
+
+    @include media(mobile) {
+      width: auto;
+    }
+  }
 }
+
 .mtp-check-cell__list-status {
   margin-left: 1rem;
 }
 
-.mtp-check-cell__list-status--my-list {
+.mtp-check-cell__list-status--my-list, .mtp-check-cell__list-status--text {
   display: inline-block;
-  margin-bottom: 1.6rem;
+  margin-bottom: 0.6rem;
 }
 
 .mtp-check-cell__list-status--my-list::before {
